// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`full output snapshots > BatchUpdates > angular 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'BatchUpdates', template: \`<div>
<span>
{{ sum() }}
</span>
<button (click)="() => batch(() => { setX(x() + 1); setY(y() + 1); })">
Both
</button>
</div>\` })
export class BatchUpdatesComponent
{
x = signal(0)
y = signal(0)
sum = computed(() => x() + y())
}
"
`;

exports[`full output snapshots > BatchUpdates > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<div {...__attrs} class={__attrs.class}>
<span>
{sum}
</span>
<button onClick={() => batch(() => { setX(x + 1); setY(y + 1); })}>
Both
</button>
</div>
"
`;

exports[`full output snapshots > BatchUpdates > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const BatchUpdates = component$((props) =>
{
const x = useSignal(0)
const y = useSignal(0)
const sum = useComputed$(() => x.value + y.value)
const { ...__attrs } = props
return (
<div {...__attrs} class={props.class}>
  <span>
    {sum.value}
  </span>
  <button onClick={$(() => () => batch(() => { setX(x.value + 1); setY(y.value + 1); }))}>
    Both
  </button>
</div>
)
});
"
`;

exports[`full output snapshots > BatchUpdates > react 1`] = `
"import { useState, useMemo } from "react";
export function BatchUpdates(props: React.HTMLAttributes<HTMLElement>)
{
const [x, setX] = useState(0)
const [y, setY] = useState(0)
const sum = useMemo(() => x + y, [x, y])
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <span>
    {sum}
  </span>
  <button onClick={() => batch(() => { setX(x + 1); setY(y + 1); })}>
    Both
  </button>
</div>
)
}
"
`;

exports[`full output snapshots > BatchUpdates > solid 1`] = `
"import { createSignal, createMemo, splitProps } from "solid-js";
import type { JSX } from "solid-js";
export default function BatchUpdates(props: JSX.HTMLAttributes<HTMLElement>)
{
const [x, setX] = createSignal(0)
const [y, setY] = createSignal(0)
const sum = createMemo(() => x() + y())
const [, __attrs] = splitProps(props, [])
return (
<div {...__attrs} class={props.class}>
  <span>
    {sum()}
  </span>
  <button onclick={() => batch(() => { setX(x() + 1); setY(y() + 1); })}>
    Both
  </button>
</div>
)
}
"
`;

exports[`full output snapshots > BatchUpdates > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
  let x = $state(0)
  let y = $state(0)
  let sum = $derived(x + y)
</script>
<div {...__attrs} class={__attrs.class}>
  <span>
    {sum}
  </span>
  <button onclick={() => batch(() => { setX(x + 1); setY(y + 1); })}>
    Both
  </button>
</div>
"
`;

exports[`full output snapshots > BatchUpdates > vue 1`] = `
"<script setup lang="ts">
  import { ref, computed } from "vue";
  const x = ref(0)
  const y = ref(0)
  const sum = computed(() => x.value + y.value)
</script>
<template>
<div>
  <span>
    {{ sum }}
  </span>
  <button @click="() => batch(() => { setX(x + 1); setY(y + 1); })">
    Both
  </button>
</div>
</template>
"
`;

exports[`full output snapshots > Composite > angular 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'Composite', template: \`<div>
<span id="sum">
{{ sum() }}
</span>
<button id="incX" (click)="() => setX(x() + 1)">
+X
</button>
<button id="incY" (click)="() => setY(y() + 1)">
+Y
</button>
</div>\` })
export class CompositeComponent
{
x = signal(1)
y = signal(2)
sum = computed(() => x() + y())
constructor() { effect(() => { console.log("sum:", sum()); }) }
}
"
`;

exports[`full output snapshots > Composite > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<div {...__attrs} class={__attrs.class}>
<span id="sum">
{sum}
</span>
<button id="incX" onClick={() => setX(x + 1)}>
+X
</button>
<button id="incY" onClick={() => setY(y + 1)}>
+Y
</button>
</div>
"
`;

exports[`full output snapshots > Composite > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const Composite = component$((props) =>
{
const x = useSignal(1)
const y = useSignal(2)
const sum = useComputed$(() => x.value + y.value)
useVisibleTask$(() => { console.log("sum:", sum.value); })
const { ...__attrs } = props
return (
<div {...__attrs} class={props.class}>
  <span id="sum">
    {sum.value}
  </span>
  <button id="incX" onClick={$(() => () => setX(x.value + 1))}>
    +X
  </button>
  <button id="incY" onClick={$(() => () => setY(y.value + 1))}>
    +Y
  </button>
</div>
)
});
"
`;

exports[`full output snapshots > Composite > react 1`] = `
"import { useState, useMemo, useEffect } from "react";
export function Composite(props: React.HTMLAttributes<HTMLElement>)
{
const [x, setX] = useState(1)
const [y, setY] = useState(2)
const sum = useMemo(() => x + y, [x, y])
useEffect(() => { console.log("sum:", sum); }, [sum])
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <span id="sum">
    {sum}
  </span>
  <button id="incX" onClick={() => setX(x + 1)}>
    +X
  </button>
  <button id="incY" onClick={() => setY(y + 1)}>
    +Y
  </button>
</div>
)
}
"
`;

exports[`full output snapshots > Composite > solid 1`] = `
"import { createSignal, createMemo, createEffect, splitProps } from "solid-js";
import type { JSX } from "solid-js";
export default function Composite(props: JSX.HTMLAttributes<HTMLElement>)
{
const [x, setX] = createSignal(1)
const [y, setY] = createSignal(2)
const sum = createMemo(() => x() + y())
createEffect(() => { console.log("sum:", sum()); })
const [, __attrs] = splitProps(props, [])
return (
<div {...__attrs} class={props.class}>
  <span id="sum">
    {sum()}
  </span>
  <button id="incX" onclick={() => setX(x() + 1)}>
    +X
  </button>
  <button id="incY" onclick={() => setY(y() + 1)}>
    +Y
  </button>
</div>
)
}
"
`;

exports[`full output snapshots > Composite > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
  let x = $state(1)
  let y = $state(2)
  let sum = $derived(x + y)
  $effect(() => { console.log("sum:", sum); })
</script>
<div {...__attrs} class={__attrs.class}>
  <span id="sum">
    {sum}
  </span>
  <button id="incX" onclick={() => setX(x + 1)}>
    +X
  </button>
  <button id="incY" onclick={() => setY(y + 1)}>
    +Y
  </button>
</div>
"
`;

exports[`full output snapshots > Composite > vue 1`] = `
"<script setup lang="ts">
  import { ref, computed, watchEffect } from "vue";
  const x = ref(1)
  const y = ref(2)
  const sum = computed(() => x.value + y.value)
  watchEffect(() => { console.log("sum:", sum.value); })
</script>
<template>
<div>
  <span id="sum">
    {{ sum }}
  </span>
  <button id="incX" @click="() => setX(x + 1)">
    +X
  </button>
  <button id="incY" @click="() => setY(y + 1)">
    +Y
  </button>
</div>
</template>
"
`;

exports[`full output snapshots > Conditional > angular 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'Conditional', template: \`<div>
@if (visible()) {
<span>
Visible
</span>
} @else {
<span>
Hidden
</span>
}
<button (click)="() => setVisible(!visible())">
Toggle
</button>
</div>\` })
export class ConditionalComponent
{
visible = signal(true)
}
"
`;

exports[`full output snapshots > Conditional > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<div {...__attrs} class={__attrs.class}>
{visible ? (<span>
Visible
</span>) : (<span>
Hidden
</span>)}
<button onClick={() => setVisible(!visible)}>
Toggle
</button>
</div>
"
`;

exports[`full output snapshots > Conditional > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const Conditional = component$((props) =>
{
const visible = useSignal(true)
const { ...__attrs } = props
return (
<div {...__attrs} class={props.class}>
  {visible.value ? (<><span>Visible</span></>) : (<><span>Hidden</span></>)}
  <button onClick={$(() => () => setVisible(!visible.value))}>
    Toggle
  </button>
</div>
)
});
"
`;

exports[`full output snapshots > Conditional > react 1`] = `
"import { useState } from "react";
export function Conditional(props: React.HTMLAttributes<HTMLElement>)
{
const [visible, setVisible] = useState(true)
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  {visible ? <span>Visible</span> : <span>Hidden</span>}
  <button onClick={() => setVisible(!visible)}>
    Toggle
  </button>
</div>
)
}
"
`;

exports[`full output snapshots > Conditional > solid 1`] = `
"import { createSignal, splitProps, Show } from "solid-js";
import type { JSX } from "solid-js";
export default function Conditional(props: JSX.HTMLAttributes<HTMLElement>)
{
const [visible, setVisible] = createSignal(true)
const [, __attrs] = splitProps(props, [])
return (
<div {...__attrs} class={props.class}>
  <Show when={visible()} fallback={<><span>Hidden</span></>}>
    <span>
      Visible
    </span>
  </Show>
  <button onclick={() => setVisible(!visible())}>
    Toggle
  </button>
</div>
)
}
"
`;

exports[`full output snapshots > Conditional > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
  let visible = $state(true)
</script>
<div {...__attrs} class={__attrs.class}>
  {#if visible}<span>
    Visible
  </span>
  {:else}<span>
    Hidden
  </span>
  {/if}
  <button onclick={() => setVisible(!visible)}>
    Toggle
  </button>
</div>
"
`;

exports[`full output snapshots > Conditional > vue 1`] = `
"<script setup lang="ts">
  import { ref } from "vue";
  const visible = ref(true)
</script>
<template>
<div>
  <span v-if="visible">
    Visible
  </span>
  <span v-else>
    Hidden
  </span>
  <button @click="() => setVisible(!visible)">
    Toggle
  </button>
</div>
</template>
"
`;

exports[`full output snapshots > ConditionalClass > angular 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'ConditionalClass', template: \`<div [class]="active() ? "active" : "inactive"">
<button (click)="() => setActive(!active())">
Toggle
</button>
</div>\` })
export class ConditionalClassComponent
{
active = signal(false)
}
"
`;

exports[`full output snapshots > ConditionalClass > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<div {...__attrs} class={[active ? "active" : "inactive", __attrs.class].filter(Boolean).join(" ")}>
<button onClick={() => setActive(!active)}>
Toggle
</button>
</div>
"
`;

exports[`full output snapshots > ConditionalClass > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const ConditionalClass = component$((props) =>
{
const active = useSignal(false)
const { ...__attrs } = props
return (
<div {...__attrs} class={[active.value ? "active" : "inactive", props.class].filter(Boolean).join(" ")}>
  <button onClick={$(() => () => setActive(!active.value))}>
    Toggle
  </button>
</div>
)
});
"
`;

exports[`full output snapshots > ConditionalClass > react 1`] = `
"import { useState } from "react";
export function ConditionalClass(props: React.HTMLAttributes<HTMLElement>)
{
const [active, setActive] = useState(false)
const { ...__attrs } = props
return (
<div {...__attrs} className={[active ? "active" : "inactive", props.className].filter(Boolean).join(" ")}>
  <button onClick={() => setActive(!active)}>
    Toggle
  </button>
</div>
)
}
"
`;

exports[`full output snapshots > ConditionalClass > solid 1`] = `
"import { createSignal, splitProps } from "solid-js";
import type { JSX } from "solid-js";
export default function ConditionalClass(props: JSX.HTMLAttributes<HTMLElement>)
{
const [active, setActive] = createSignal(false)
const [, __attrs] = splitProps(props, [])
return (
<div {...__attrs} class={[active() ? "active" : "inactive", props.class].filter(Boolean).join(" ")}>
  <button onclick={() => setActive(!active())}>
    Toggle
  </button>
</div>
)
}
"
`;

exports[`full output snapshots > ConditionalClass > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
  let active = $state(false)
</script>
<div {...__attrs} class={[active ? "active" : "inactive", __attrs.class].filter(Boolean).join(" ")}>
  <button onclick={() => setActive(!active)}>
    Toggle
  </button>
</div>
"
`;

exports[`full output snapshots > ConditionalClass > vue 1`] = `
"<script setup lang="ts">
  import { ref } from "vue";
  const active = ref(false)
</script>
<template>
<div :class='active ? "active" : "inactive"'>
  <button @click="() => setActive(!active)">
    Toggle
  </button>
</div>
</template>
"
`;

exports[`full output snapshots > ControlledSelect > angular 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'ControlledSelect', template: \`<select [value]="value()" (change)="e => setValue(e.target.value)">
<option value="a">
A
</option>
<option value="b">
B
</option>
<option value="c">
C
</option>
</select>\` })
export class ControlledSelectComponent
{
value = signal("b")
}
"
`;

exports[`full output snapshots > ControlledSelect > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<select {...__attrs} value={value} onChange={e => setValue(e.target.value)} class={__attrs.class}>
<option value="a">
A
</option>
<option value="b">
B
</option>
<option value="c">
C
</option>
</select>
"
`;

exports[`full output snapshots > ControlledSelect > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const ControlledSelect = component$((props) =>
{
const value = useSignal("b")
const { ...__attrs } = props
return (
<select {...__attrs} value={value.value} class={props.class} onChange={$(() => e => setValue(e.target.value))}>
  <option value="a">
    A
  </option>
  <option value="b">
    B
  </option>
  <option value="c">
    C
  </option>
</select>
)
});
"
`;

exports[`full output snapshots > ControlledSelect > react 1`] = `
"import { useState } from "react";
export function ControlledSelect(props: React.HTMLAttributes<HTMLElement>)
{
const [value, setValue] = useState("b")
const { ...__attrs } = props
return (
<select {...__attrs} value={value} className={props.className} onChange={e => setValue(e.target.value)}>
  <option value="a">
    A
  </option>
  <option value="b">
    B
  </option>
  <option value="c">
    C
  </option>
</select>
)
}
"
`;

exports[`full output snapshots > ControlledSelect > solid 1`] = `
"import { createSignal, splitProps } from "solid-js";
import type { JSX } from "solid-js";
export default function ControlledSelect(props: JSX.HTMLAttributes<HTMLElement>)
{
const [value, setValue] = createSignal("b")
const [, __attrs] = splitProps(props, [])
return (
<select {...__attrs} value={value()} class={props.class} onchange={e => setValue(e.target.value)}>
  <option value="a">
    A
  </option>
  <option value="b">
    B
  </option>
  <option value="c">
    C
  </option>
</select>
)
}
"
`;

exports[`full output snapshots > ControlledSelect > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
  let value = $state("b")
</script>
<select {...__attrs} value={value} class={__attrs.class} onchange={e => setValue(e.target.value)}>
  <option value="a">
    A
  </option>
  <option value="b">
    B
  </option>
  <option value="c">
    C
  </option>
</select>
"
`;

exports[`full output snapshots > ControlledSelect > vue 1`] = `
"<script setup lang="ts">
  import { ref } from "vue";
  const value = ref("b")
</script>
<template>
<select :value="value" @change="e => setValue(e.target.value)">
  <option value="a">
    A
  </option>
  <option value="b">
    B
  </option>
  <option value="c">
    C
  </option>
</select>
</template>
"
`;

exports[`full output snapshots > ControlledTextarea > angular 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'ControlledTextarea', template: \`<div>
<textarea [value]="text()" (input)="e => setText(e.target.value)" />
<p>
{{ text().length }}
characters
</p>
</div>\` })
export class ControlledTextareaComponent
{
text = signal("")
}
"
`;

exports[`full output snapshots > ControlledTextarea > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<div {...__attrs} class={__attrs.class}>
<textarea value={text} onInput={e => setText(e.target.value)} />
<p>
{text.length}
characters
</p>
</div>
"
`;

exports[`full output snapshots > ControlledTextarea > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const ControlledTextarea = component$((props) =>
{
const text = useSignal("")
const { ...__attrs } = props
return (
<div {...__attrs} class={props.class}>
  <textarea value={text.value} onInput={$(() => e => setText(e.target.value))} />
  <p>
    {text.value.length}
    characters
  </p>
</div>
)
});
"
`;

exports[`full output snapshots > ControlledTextarea > react 1`] = `
"import { useState } from "react";
export function ControlledTextarea(props: React.HTMLAttributes<HTMLElement>)
{
const [text, setText] = useState("")
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <textarea value={text} onInput={e => setText(e.target.value)} />
  <p>
    {text.length}
    characters
  </p>
</div>
)
}
"
`;

exports[`full output snapshots > ControlledTextarea > solid 1`] = `
"import { createSignal, splitProps } from "solid-js";
import type { JSX } from "solid-js";
export default function ControlledTextarea(props: JSX.HTMLAttributes<HTMLElement>)
{
const [text, setText] = createSignal("")
const [, __attrs] = splitProps(props, [])
return (
<div {...__attrs} class={props.class}>
  <textarea value={text()} oninput={e => setText(e.target.value)} />
  <p>
    {text().length}
    characters
  </p>
</div>
)
}
"
`;

exports[`full output snapshots > ControlledTextarea > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
  let text = $state("")
</script>
<div {...__attrs} class={__attrs.class}>
  <textarea value={text} oninput={e => setText(e.target.value)} />
  <p>
    {text.length}
    characters
  </p>
</div>
"
`;

exports[`full output snapshots > ControlledTextarea > vue 1`] = `
"<script setup lang="ts">
  import { ref } from "vue";
  const text = ref("")
</script>
<template>
<div>
  <textarea :value="text" @input="e => setText(e.target.value)" />
  <p>
    {{ text.length }}
    characters
  </p>
</div>
</template>
"
`;

exports[`full output snapshots > Counter > angular 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'Counter', template: \`<div>
<p>
{{ count() }}
</p>
<p>
{{ doubled() }}
</p>
<button (click)="() => setCount(count() + 1)">
+1
</button>
</div>\` })
export class CounterComponent
{
count = signal(0)
doubled = computed(() => count() * 2)
constructor() { effect(() => { console.log("count:", count()); }) }
}
"
`;

exports[`full output snapshots > Counter > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<div {...__attrs} class={__attrs.class}>
<p>
{count}
</p>
<p>
{doubled}
</p>
<button onClick={() => setCount(count + 1)}>
+1
</button>
</div>
"
`;

exports[`full output snapshots > Counter > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const Counter = component$((props) =>
{
const count = useSignal(0)
const doubled = useComputed$(() => count.value * 2)
useVisibleTask$(() => { console.log("count:", count.value); })
const { ...__attrs } = props
return (
<div {...__attrs} class={props.class}>
  <p>
    {count.value}
  </p>
  <p>
    {doubled.value}
  </p>
  <button onClick={$(() => () => setCount(count.value + 1))}>
    +1
  </button>
</div>
)
});
"
`;

exports[`full output snapshots > Counter > react 1`] = `
"import { useState, useMemo, useEffect } from "react";
export function Counter(props: React.HTMLAttributes<HTMLElement>)
{
const [count, setCount] = useState(0)
const doubled = useMemo(() => count * 2, [count])
useEffect(() => { console.log("count:", count); }, [count])
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <p>
    {count}
  </p>
  <p>
    {doubled}
  </p>
  <button onClick={() => setCount(count + 1)}>
    +1
  </button>
</div>
)
}
"
`;

exports[`full output snapshots > Counter > solid 1`] = `
"import { createSignal, createMemo, createEffect, splitProps } from "solid-js";
import type { JSX } from "solid-js";
export default function Counter(props: JSX.HTMLAttributes<HTMLElement>)
{
const [count, setCount] = createSignal(0)
const doubled = createMemo(() => count() * 2)
createEffect(() => { console.log("count:", count()); })
const [, __attrs] = splitProps(props, [])
return (
<div {...__attrs} class={props.class}>
  <p>
    {count()}
  </p>
  <p>
    {doubled()}
  </p>
  <button onclick={() => setCount(count() + 1)}>
    +1
  </button>
</div>
)
}
"
`;

exports[`full output snapshots > Counter > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
  let count = $state(0)
  let doubled = $derived(count * 2)
  $effect(() => { console.log("count:", count); })
</script>
<div {...__attrs} class={__attrs.class}>
  <p>
    {count}
  </p>
  <p>
    {doubled}
  </p>
  <button onclick={() => setCount(count + 1)}>
    +1
  </button>
</div>
"
`;

exports[`full output snapshots > Counter > vue 1`] = `
"<script setup lang="ts">
  import { ref, computed, watchEffect } from "vue";
  const count = ref(0)
  const doubled = computed(() => count.value * 2)
  watchEffect(() => { console.log("count:", count.value); })
</script>
<template>
<div>
  <p>
    {{ count }}
  </p>
  <p>
    {{ doubled }}
  </p>
  <button @click="() => setCount(count + 1)">
    +1
  </button>
</div>
</template>
"
`;

exports[`full output snapshots > DefineSlotBasic > angular 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'DefineSlotBasic', template: \`<div>
<header>
<ng-content select="[slot=header]" />
</header>
<main>
<ng-content />
</main>
</div>\` })
export class DefineSlotBasicComponent
{
}
"
`;

exports[`full output snapshots > DefineSlotBasic > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<div {...__attrs} class={__attrs.class}>
<header>
<slot name="header" />
</header>
<main>
<slot />
</main>
</div>
"
`;

exports[`full output snapshots > DefineSlotBasic > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const DefineSlotBasic = component$((props) =>
{
const { header, children, ...__attrs } = props
return (
<div {...__attrs} class={props.class}>
  <header>
    {props.header}
  </header>
  <main>
    {props.children}
  </main>
</div>
)
});
"
`;

exports[`full output snapshots > DefineSlotBasic > react 1`] = `
"export function DefineSlotBasic(props: { renderHeader?: (...args: any[]) => React.ReactNode; children?: React.ReactNode } & React.HTMLAttributes<HTMLElement>)
{
const { renderHeader, children, ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <header>
    {props.renderHeader?.()}
  </header>
  <main>
    {props.children}
  </main>
</div>
)
}
"
`;

exports[`full output snapshots > DefineSlotBasic > solid 1`] = `
"import { splitProps } from "solid-js";
import type { JSX } from "solid-js";
export default function DefineSlotBasic(props: { header?: any; children?: any } & JSX.HTMLAttributes<HTMLElement>)
{
const [, __attrs] = splitProps(props, ["header", "children"])
return (
<div {...__attrs} class={props.class}>
  <header>
    {props.header}
  </header>
  <main>
    {props.children}
  </main>
</div>
)
}
"
`;

exports[`full output snapshots > DefineSlotBasic > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
</script>
<div {...__attrs} class={__attrs.class}>
  <header>
    <slot name="header" />
  </header>
  <main>
    <slot />
  </main>
</div>
"
`;

exports[`full output snapshots > DefineSlotBasic > vue 1`] = `
"<script setup lang="ts">
</script>
<template>
<div>
  <header>
    <slot name="header" />
  </header>
  <main>
    <slot />
  </main>
</div>
</template>
"
`;

exports[`full output snapshots > DynamicList > angular 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'DynamicList', template: \`<div>
<input [value]="input()" (input)="e => setInput(e.target.value)" />
<button (click)="() => { setItems([...items(), input()]); setInput(""); }">
Add
</button>
<ul>
@for (item of items(); track (item, i) => i) {
<li>
{{ item }}
</li>
}
</ul>
</div>\` })
export class DynamicListComponent
{
items = signal([])
input = signal("")
}
"
`;

exports[`full output snapshots > DynamicList > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<div {...__attrs} class={__attrs.class}>
<input value={input} onInput={e => setInput(e.target.value)} />
<button onClick={() => { setItems([...items, input]); setInput(""); }}>
Add
</button>
<ul>
{items.map((item, i) => (<li>
{item}
</li>))}
</ul>
</div>
"
`;

exports[`full output snapshots > DynamicList > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const DynamicList = component$((props) =>
{
const items = useSignal([])
const input = useSignal("")
const { ...__attrs } = props
return (
<div {...__attrs} class={props.class}>
  <input value={input.value} onInput={$(() => e => setInput(e.target.value))} />
  <button onClick={$(() => () => { setItems([...items.value, input.value]); setInput(""); })}>
    Add
  </button>
  <ul>
    {items.value.map((item, i) => (<><li>{item}</li></>))}
  </ul>
</div>
)
});
"
`;

exports[`full output snapshots > DynamicList > react 1`] = `
"import { useState } from "react";
export function DynamicList(props: React.HTMLAttributes<HTMLElement>)
{
const [items, setItems] = useState([])
const [input, setInput] = useState("")
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <input value={input} onInput={e => setInput(e.target.value)} />
  <button onClick={() => { setItems([...items, input]); setInput(""); }}>
    Add
  </button>
  <ul>
    {items.map((item, i) => (<React.Fragment key={(item, i) => i}><li>{item}</li></React.Fragment>))}
  </ul>
</div>
)
}
"
`;

exports[`full output snapshots > DynamicList > solid 1`] = `
"import { createSignal, splitProps, For } from "solid-js";
import type { JSX } from "solid-js";
export default function DynamicList(props: JSX.HTMLAttributes<HTMLElement>)
{
const [items, setItems] = createSignal([])
const [input, setInput] = createSignal("")
const [, __attrs] = splitProps(props, [])
return (
<div {...__attrs} class={props.class}>
  <input value={input()} oninput={e => setInput(e.target.value)} />
  <button onclick={() => { setItems([...items(), input()]); setInput(""); }}>
    Add
  </button>
  <ul>
    <For each={items()}>
      {(item, i) => <li>{item}</li>}
    </For>
  </ul>
</div>
)
}
"
`;

exports[`full output snapshots > DynamicList > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
  let items = $state([])
  let input = $state("")
</script>
<div {...__attrs} class={__attrs.class}>
  <input value={input} oninput={e => setInput(e.target.value)} />
  <button onclick={() => { setItems([...items, input]); setInput(""); }}>
    Add
  </button>
  <ul>
    {#each items as item, i (i)}<li>
      {item}
    </li>
    {/each}
  </ul>
</div>
"
`;

exports[`full output snapshots > DynamicList > vue 1`] = `
"<script setup lang="ts">
  import { ref } from "vue";
  const items = ref([])
  const input = ref("")
</script>
<template>
<div>
  <input :value="input" @input="e => setInput(e.target.value)" />
  <button @click='() => { setItems([...items, input]); setInput(""); }'>
    Add
  </button>
  <ul>
    <li v-for="(item, i) in items" :key="i">
      {{ item }}
    </li>
  </ul>
</div>
</template>
"
`;

exports[`full output snapshots > EffectCleanup > angular 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'EffectCleanup', template: \`<button (click)="() => setActive(!active())">
Toggle
</button>\` })
export class EffectCleanupComponent
{
active = signal(true)
constructor() { effect(() => { if (active()) {
      const id = setInterval(() => console.log("tick"), 1000);
      return () => clearInterval(id);
    } }) }
}
"
`;

exports[`full output snapshots > EffectCleanup > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<button {...__attrs} onClick={() => setActive(!active)} class={__attrs.class}>
Toggle
</button>
"
`;

exports[`full output snapshots > EffectCleanup > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const EffectCleanup = component$((props) =>
{
const active = useSignal(true)
useVisibleTask$(() => { if (active()) {
      const id = setInterval(() => console.log("tick"), 1000);
      return () => clearInterval(id);
    } })
const { ...__attrs } = props
return (
<button {...__attrs} class={props.class} onClick={$(() => () => setActive(!active.value))}>
  Toggle
</button>
)
});
"
`;

exports[`full output snapshots > EffectCleanup > react 1`] = `
"import { useState, useEffect } from "react";
export function EffectCleanup(props: React.HTMLAttributes<HTMLElement>)
{
const [active, setActive] = useState(true)
useEffect(() => { if (active()) {
      const id = setInterval(() => console.log("tick"), 1000);
      return () => clearInterval(id);
    } }, [active])
const { ...__attrs } = props
return (
<button {...__attrs} className={props.className} onClick={() => setActive(!active)}>
  Toggle
</button>
)
}
"
`;

exports[`full output snapshots > EffectCleanup > solid 1`] = `
"import { createSignal, createEffect, splitProps } from "solid-js";
import type { JSX } from "solid-js";
export default function EffectCleanup(props: JSX.HTMLAttributes<HTMLElement>)
{
const [active, setActive] = createSignal(true)
createEffect(() => { if (active()) {
      const id = setInterval(() => console.log("tick"), 1000);
      return () => clearInterval(id);
    } })
const [, __attrs] = splitProps(props, [])
return (
<button {...__attrs} class={props.class} onclick={() => setActive(!active())}>
  Toggle
</button>
)
}
"
`;

exports[`full output snapshots > EffectCleanup > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
  let active = $state(true)
  $effect(() => { if (active()) {
      const id = setInterval(() => console.log("tick"), 1000);
      return () => clearInterval(id);
    } })
</script>
<button {...__attrs} class={__attrs.class} onclick={() => setActive(!active)}>
  Toggle
</button>
"
`;

exports[`full output snapshots > EffectCleanup > vue 1`] = `
"<script setup lang="ts">
  import { ref, watchEffect } from "vue";
  const active = ref(true)
  watchEffect(() => { if (active()) {
      const id = setInterval(() => console.log("tick"), 1000);
      return () => clearInterval(id);
    } })
</script>
<template>
<button @click="() => setActive(!active)">
  Toggle
</button>
</template>
"
`;

exports[`full output snapshots > ElementRef > angular 1`] = `
"import { Component, signal, computed, effect, viewChild, ElementRef } from "@angular/core";
@Component({ standalone: true, selector: 'ElementRef', template: \`<input placeholder="auto-focus" #inputRef />\` })
export class ElementRefComponent
{
inputRef = viewChild<ElementRef>('inputRef')
}
"
`;

exports[`full output snapshots > ElementRef > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<input {...__attrs} placeholder="auto-focus" class={__attrs.class} />
"
`;

exports[`full output snapshots > ElementRef > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const ElementRef = component$((props) =>
{
const inputRef = useSignal(null)
const { ...__attrs } = props
return (
<input {...__attrs} placeholder="auto-focus" class={props.class} ref={inputRef} />
)
});
"
`;

exports[`full output snapshots > ElementRef > react 1`] = `
"import { useRef, useEffect } from "react";
export function ElementRef(props: React.HTMLAttributes<HTMLElement>)
{
const inputRef = useRef(null)
useEffect(() => { inputRef.current?.focus(); }, [])
const { ...__attrs } = props
return (
<input {...__attrs} placeholder="auto-focus" className={props.className} ref={inputRef} />
)
}
"
`;

exports[`full output snapshots > ElementRef > solid 1`] = `
"import { onMount, splitProps } from "solid-js";
import type { JSX } from "solid-js";
export default function ElementRef(props: JSX.HTMLAttributes<HTMLElement>)
{
onMount(() => { inputRef?.focus(); })
let inputRef: HTMLElement | undefined
const [, __attrs] = splitProps(props, [])
return (
<input {...__attrs} placeholder="auto-focus" class={props.class} ref={(el) => inputRef = el} />
)
}
"
`;

exports[`full output snapshots > ElementRef > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
  $effect(() => { inputRef?.focus(); })
  let inputRef = $state<HTMLElement | null>(null)
</script>
<input bind:this={inputRef} {...__attrs} placeholder="auto-focus" class={__attrs.class} />
"
`;

exports[`full output snapshots > ElementRef > vue 1`] = `
"<script setup lang="ts">
  import { ref, onMounted } from "vue";
  const inputRef = ref(null)
  onMounted(() => { inputRef.value?.focus(); })
</script>
<template>
<input placeholder="auto-focus" ref="inputRef" />
</template>
"
`;

exports[`full output snapshots > ForLoop > angular 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'ForLoop', template: \`<ul>
@for (item of items(); track item => item) {
<li>
{{ item }}
</li>
}
</ul>\` })
export class ForLoopComponent
{
items = signal(["Apple", "Banana", "Cherry"])
}
"
`;

exports[`full output snapshots > ForLoop > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<ul {...__attrs} class={__attrs.class}>
{items.map((item) => (<li>
{item}
</li>))}
</ul>
"
`;

exports[`full output snapshots > ForLoop > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const ForLoop = component$((props) =>
{
const items = useSignal(["Apple", "Banana", "Cherry"])
const { ...__attrs } = props
return (
<ul {...__attrs} class={props.class}>
  {items.value.map((item) => (<><li>{item}</li></>))}
</ul>
)
});
"
`;

exports[`full output snapshots > ForLoop > react 1`] = `
"import { useState } from "react";
export function ForLoop(props: React.HTMLAttributes<HTMLElement>)
{
const [items, setItems] = useState(["Apple", "Banana", "Cherry"])
const { ...__attrs } = props
return (
<ul {...__attrs} className={props.className}>
  {items.map((item) => (<React.Fragment key={item => item}><li>{item}</li></React.Fragment>))}
</ul>
)
}
"
`;

exports[`full output snapshots > ForLoop > solid 1`] = `
"import { createSignal, splitProps, For } from "solid-js";
import type { JSX } from "solid-js";
export default function ForLoop(props: JSX.HTMLAttributes<HTMLElement>)
{
const [items, setItems] = createSignal(["Apple", "Banana", "Cherry"])
const [, __attrs] = splitProps(props, [])
return (
<ul {...__attrs} class={props.class}>
  <For each={items()}>
    {(item) => <li>{item}</li>}
  </For>
</ul>
)
}
"
`;

exports[`full output snapshots > ForLoop > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
  let items = $state(["Apple", "Banana", "Cherry"])
</script>
<ul {...__attrs} class={__attrs.class}>
  {#each items as item (item)}<li>
    {item}
  </li>
  {/each}
</ul>
"
`;

exports[`full output snapshots > ForLoop > vue 1`] = `
"<script setup lang="ts">
  import { ref } from "vue";
  const items = ref(["Apple", "Banana", "Cherry"])
</script>
<template>
<ul>
  <li v-for="item in items" :key="item">
    {{ item }}
  </li>
</ul>
</template>
"
`;

exports[`full output snapshots > FormField > angular 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'FormField', template: \`<div>
<input [value]="value()" (input)="e => setValue(e.target.value)" />
<p>
{{ value() }}
</p>
</div>\` })
export class FormFieldComponent
{
value = signal("")
}
"
`;

exports[`full output snapshots > FormField > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<div {...__attrs} class={__attrs.class}>
<input value={value} onInput={e => setValue(e.target.value)} />
<p>
{value}
</p>
</div>
"
`;

exports[`full output snapshots > FormField > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const FormField = component$((props) =>
{
const value = useSignal("")
const { ...__attrs } = props
return (
<div {...__attrs} class={props.class}>
  <input value={value.value} onInput={$(() => e => setValue(e.target.value))} />
  <p>
    {value.value}
  </p>
</div>
)
});
"
`;

exports[`full output snapshots > FormField > react 1`] = `
"import { useState } from "react";
export function FormField(props: React.HTMLAttributes<HTMLElement>)
{
const [value, setValue] = useState("")
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <input value={value} onInput={e => setValue(e.target.value)} />
  <p>
    {value}
  </p>
</div>
)
}
"
`;

exports[`full output snapshots > FormField > solid 1`] = `
"import { createSignal, splitProps } from "solid-js";
import type { JSX } from "solid-js";
export default function FormField(props: JSX.HTMLAttributes<HTMLElement>)
{
const [value, setValue] = createSignal("")
const [, __attrs] = splitProps(props, [])
return (
<div {...__attrs} class={props.class}>
  <input value={value()} oninput={e => setValue(e.target.value)} />
  <p>
    {value()}
  </p>
</div>
)
}
"
`;

exports[`full output snapshots > FormField > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
  let value = $state("")
</script>
<div {...__attrs} class={__attrs.class}>
  <input value={value} oninput={e => setValue(e.target.value)} />
  <p>
    {value}
  </p>
</div>
"
`;

exports[`full output snapshots > FormField > vue 1`] = `
"<script setup lang="ts">
  import { ref } from "vue";
  const value = ref("")
</script>
<template>
<div>
  <input :value="value" @input="e => setValue(e.target.value)" />
  <p>
    {{ value }}
  </p>
</div>
</template>
"
`;

exports[`full output snapshots > IButton > angular 1`] = `
"import { Component, signal, computed, effect, Input } from "@angular/core";
@Component({ standalone: true, selector: 'IButton', template: \`<button [disabled]="disabled">
{{ label }}
</button>\` })
export class IButtonComponent
{
@Input() label!: string
@Input() disabled?: boolean
}
"
`;

exports[`full output snapshots > IButton > astro 1`] = `
"---
type Props = { label: string; disabled?: boolean } & Record<string, any>
const props = Astro.props as Props;
const { label, disabled, ...__attrs } = props;
---
<button {...__attrs} disabled={disabled} class={__attrs.class}>
{label}
</button>
"
`;

exports[`full output snapshots > IButton > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const IButton = component$((props) =>
{
const { label, disabled, ...__attrs } = props
return (
<button {...__attrs} disabled={props.disabled} class={props.class}>
  {props.label}
</button>
)
});
"
`;

exports[`full output snapshots > IButton > react 1`] = `
"export function IButton(props: { label: string; disabled?: boolean } & React.HTMLAttributes<HTMLElement>)
{
const { label, disabled, ...__attrs } = props
return (
<button {...__attrs} disabled={props.disabled} className={props.className}>
  {props.label}
</button>
)
}
"
`;

exports[`full output snapshots > IButton > solid 1`] = `
"import { splitProps } from "solid-js";
import type { JSX } from "solid-js";
export default function IButton(props: { label: string; disabled?: boolean } & JSX.HTMLAttributes<HTMLElement>)
{
const [, __attrs] = splitProps(props, ["label", "disabled"])
return (
<button {...__attrs} disabled={props.disabled} class={props.class}>
  {props.label}
</button>
)
}
"
`;

exports[`full output snapshots > IButton > svelte 1`] = `
"<script lang="ts">
  interface Props { label: string; disabled?: boolean }
  let { label, disabled, ...__attrs }: Props & Record<string, any> = $props()
</script>
<button {...__attrs} disabled={disabled} class={__attrs.class}>
  {label}
</button>
"
`;

exports[`full output snapshots > IButton > vue 1`] = `
"<script setup lang="ts">
  const props = defineProps<{ label: string; disabled?: boolean }>()
</script>
<template>
<button :disabled="disabled">
  {{ label }}
</button>
</template>
"
`;

exports[`full output snapshots > Lifecycle > angular 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'Lifecycle', template: \`<span>
{{ mounted() ? "mounted" : "pending" }}
</span>\` })
export class LifecycleComponent
{
mounted = signal(false)
}
"
`;

exports[`full output snapshots > Lifecycle > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<span {...__attrs} class={__attrs.class}>
{mounted ? "mounted" : "pending"}
</span>
"
`;

exports[`full output snapshots > Lifecycle > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const Lifecycle = component$((props) =>
{
const mounted = useSignal(false)
const { ...__attrs } = props
return (
<span {...__attrs} class={props.class}>
  {mounted.value ? "mounted" : "pending"}
</span>
)
});
"
`;

exports[`full output snapshots > Lifecycle > react 1`] = `
"import { useState, useEffect } from "react";
export function Lifecycle(props: React.HTMLAttributes<HTMLElement>)
{
const [mounted, setMounted] = useState(false)
useEffect(() => { setMounted(true); }, [])
useEffect(() => () => { console.log("cleanup"); }, [])
const { ...__attrs } = props
return (
<span {...__attrs} className={props.className}>
  {mounted ? "mounted" : "pending"}
</span>
)
}
"
`;

exports[`full output snapshots > Lifecycle > solid 1`] = `
"import { createSignal, onMount, onCleanup, splitProps } from "solid-js";
import type { JSX } from "solid-js";
export default function Lifecycle(props: JSX.HTMLAttributes<HTMLElement>)
{
const [mounted, setMounted] = createSignal(false)
onMount(() => { setMounted(true); })
onCleanup(() => { console.log("cleanup"); })
const [, __attrs] = splitProps(props, [])
return (
<span {...__attrs} class={props.class}>
  {mounted() ? "mounted" : "pending"}
</span>
)
}
"
`;

exports[`full output snapshots > Lifecycle > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
  let mounted = $state(false)
  $effect(() => { setMounted(true); })
  $effect(() => { return () => { console.log("cleanup"); } })
</script>
<span {...__attrs} class={__attrs.class}>
  {mounted ? "mounted" : "pending"}
</span>
"
`;

exports[`full output snapshots > Lifecycle > vue 1`] = `
"<script setup lang="ts">
  import { ref, onMounted, onUnmounted } from "vue";
  const mounted = ref(false)
  onMounted(() => { setMounted(true); })
  onUnmounted(() => { console.log("cleanup"); })
</script>
<template>
<span>
  {{ mounted ? "mounted" : "pending" }}
</span>
</template>
"
`;

exports[`full output snapshots > MemoChain > angular 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'MemoChain', template: \`<div>
<span>
{{ label() }}
</span>
<button (click)="() => setBase(base() + 1)">
+1
</button>
</div>\` })
export class MemoChainComponent
{
base = signal(1)
doubled = computed(() => base() * 2)
quadrupled = computed(() => doubled() * 2)
label = computed(() => \`Value: \${quadrupled()}\`)
}
"
`;

exports[`full output snapshots > MemoChain > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<div {...__attrs} class={__attrs.class}>
<span>
{label}
</span>
<button onClick={() => setBase(base + 1)}>
+1
</button>
</div>
"
`;

exports[`full output snapshots > MemoChain > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const MemoChain = component$((props) =>
{
const base = useSignal(1)
const doubled = useComputed$(() => base.value * 2)
const quadrupled = useComputed$(() => doubled.value * 2)
const label = useComputed$(() => \`Value: \${quadrupled.value}\`)
const { ...__attrs } = props
return (
<div {...__attrs} class={props.class}>
  <span>
    {label.value}
  </span>
  <button onClick={$(() => () => setBase(base.value + 1))}>
    +1
  </button>
</div>
)
});
"
`;

exports[`full output snapshots > MemoChain > react 1`] = `
"import { useState, useMemo } from "react";
export function MemoChain(props: React.HTMLAttributes<HTMLElement>)
{
const [base, setBase] = useState(1)
const doubled = useMemo(() => base * 2, [base])
const quadrupled = useMemo(() => doubled * 2, [doubled])
const label = useMemo(() => \`Value: \${quadrupled}\`, [quadrupled])
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <span>
    {label}
  </span>
  <button onClick={() => setBase(base + 1)}>
    +1
  </button>
</div>
)
}
"
`;

exports[`full output snapshots > MemoChain > solid 1`] = `
"import { createSignal, createMemo, splitProps } from "solid-js";
import type { JSX } from "solid-js";
export default function MemoChain(props: JSX.HTMLAttributes<HTMLElement>)
{
const [base, setBase] = createSignal(1)
const doubled = createMemo(() => base() * 2)
const quadrupled = createMemo(() => doubled() * 2)
const label = createMemo(() => \`Value: \${quadrupled()}\`)
const [, __attrs] = splitProps(props, [])
return (
<div {...__attrs} class={props.class}>
  <span>
    {label()}
  </span>
  <button onclick={() => setBase(base() + 1)}>
    +1
  </button>
</div>
)
}
"
`;

exports[`full output snapshots > MemoChain > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
  let base = $state(1)
  let doubled = $derived(base * 2)
  let quadrupled = $derived(doubled * 2)
  let label = $derived(\`Value: \${quadrupled}\`)
</script>
<div {...__attrs} class={__attrs.class}>
  <span>
    {label}
  </span>
  <button onclick={() => setBase(base + 1)}>
    +1
  </button>
</div>
"
`;

exports[`full output snapshots > MemoChain > vue 1`] = `
"<script setup lang="ts">
  import { ref, computed } from "vue";
  const base = ref(1)
  const doubled = computed(() => base.value * 2)
  const quadrupled = computed(() => doubled.value * 2)
  const label = computed(() => \`Value: \${quadrupled.value}\`)
</script>
<template>
<div>
  <span>
    {{ label }}
  </span>
  <button @click="() => setBase(base + 1)">
    +1
  </button>
</div>
</template>
"
`;

exports[`full output snapshots > MixedControlFlow > angular 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'MixedControlFlow', template: \`<div>
<input [value]="filter()" (input)="e => setFilter(e.target.value)" />
<ul>
@for (item of items(); track item => item) {
@if (item.includes(filter())) {
<li>
{{ item }}
</li>
}
}
</ul>
</div>\` })
export class MixedControlFlowComponent
{
items = signal(["a", "b", "c"])
filter = signal("")
}
"
`;

exports[`full output snapshots > MixedControlFlow > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<div {...__attrs} class={__attrs.class}>
<input value={filter} onInput={e => setFilter(e.target.value)} />
<ul>
{items.map((item) => (item.includes(filter) ? (<li>
{item}
</li>) : null))}
</ul>
</div>
"
`;

exports[`full output snapshots > MixedControlFlow > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const MixedControlFlow = component$((props) =>
{
const items = useSignal(["a", "b", "c"])
const filter = useSignal("")
const { ...__attrs } = props
return (
<div {...__attrs} class={props.class}>
  <input value={filter.value} onInput={$(() => e => setFilter(e.target.value))} />
  <ul>
    {items.value.map((item) => (<>{item.includes(filter.value) ? (<><li>{item}</li></>) : null}</>))}
  </ul>
</div>
)
});
"
`;

exports[`full output snapshots > MixedControlFlow > react 1`] = `
"import { useState } from "react";
export function MixedControlFlow(props: React.HTMLAttributes<HTMLElement>)
{
const [items, setItems] = useState(["a", "b", "c"])
const [filter, setFilter] = useState("")
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <input value={filter} onInput={e => setFilter(e.target.value)} />
  <ul>
    {items.map((item) => (<React.Fragment key={item => item}>{item.includes(filter) ? <li>{item}</li> : null}</React.Fragment>))}
  </ul>
</div>
)
}
"
`;

exports[`full output snapshots > MixedControlFlow > solid 1`] = `
"import { createSignal, splitProps, For, Show } from "solid-js";
import type { JSX } from "solid-js";
export default function MixedControlFlow(props: JSX.HTMLAttributes<HTMLElement>)
{
const [items, setItems] = createSignal(["a", "b", "c"])
const [filter, setFilter] = createSignal("")
const [, __attrs] = splitProps(props, [])
return (
<div {...__attrs} class={props.class}>
  <input value={filter()} oninput={e => setFilter(e.target.value)} />
  <ul>
    <For each={items()}>
      {(item) => <Show when={item.includes(filter())}><li>{item}</li></Show>}
    </For>
  </ul>
</div>
)
}
"
`;

exports[`full output snapshots > MixedControlFlow > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
  let items = $state(["a", "b", "c"])
  let filter = $state("")
</script>
<div {...__attrs} class={__attrs.class}>
  <input value={filter} oninput={e => setFilter(e.target.value)} />
  <ul>
    {#each items as item (item)}{#if item.includes(filter)}<li>
      {item}
    </li>
    {/if}{/each}
  </ul>
</div>
"
`;

exports[`full output snapshots > MixedControlFlow > vue 1`] = `
"<script setup lang="ts">
  import { ref } from "vue";
  const items = ref(["a", "b", "c"])
  const filter = ref("")
</script>
<template>
<div>
  <input :value="filter" @input="e => setFilter(e.target.value)" />
  <ul>
    <template v-for="item in items" :key="item">
      <li v-if="item.includes(filter)">
        {{ item }}
      </li>
    </template>
  </ul>
</div>
</template>
"
`;

exports[`full output snapshots > MultiRefs > angular 1`] = `
"import { Component, signal, computed, effect, viewChild, ElementRef } from "@angular/core";
@Component({ standalone: true, selector: 'MultiRefs', template: \`<div>
<input placeholder="focus me" #inputRef />
<button #buttonRef>
Click
</button>
</div>\` })
export class MultiRefsComponent
{
inputRef = viewChild<ElementRef>('inputRef')
buttonRef = viewChild<ElementRef>('buttonRef')
}
"
`;

exports[`full output snapshots > MultiRefs > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<div {...__attrs} class={__attrs.class}>
<input placeholder="focus me" />
<button>
Click
</button>
</div>
"
`;

exports[`full output snapshots > MultiRefs > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const MultiRefs = component$((props) =>
{
const inputRef = useSignal(null)
const buttonRef = useSignal(null)
const { ...__attrs } = props
return (
<div {...__attrs} class={props.class}>
  <input placeholder="focus me" ref={inputRef} />
  <button ref={buttonRef}>
    Click
  </button>
</div>
)
});
"
`;

exports[`full output snapshots > MultiRefs > react 1`] = `
"import { useRef, useEffect } from "react";
export function MultiRefs(props: React.HTMLAttributes<HTMLElement>)
{
const inputRef = useRef(null)
const buttonRef = useRef(null)
useEffect(() => { inputRef.current?.focus(); }, [])
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <input placeholder="focus me" ref={inputRef} />
  <button ref={buttonRef}>
    Click
  </button>
</div>
)
}
"
`;

exports[`full output snapshots > MultiRefs > solid 1`] = `
"import { onMount, splitProps } from "solid-js";
import type { JSX } from "solid-js";
export default function MultiRefs(props: JSX.HTMLAttributes<HTMLElement>)
{
onMount(() => { inputRef?.focus(); })
let inputRef: HTMLElement | undefined
let buttonRef: HTMLElement | undefined
const [, __attrs] = splitProps(props, [])
return (
<div {...__attrs} class={props.class}>
  <input placeholder="focus me" ref={(el) => inputRef = el} />
  <button ref={(el) => buttonRef = el}>
    Click
  </button>
</div>
)
}
"
`;

exports[`full output snapshots > MultiRefs > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
  $effect(() => { inputRef?.focus(); })
  let inputRef = $state<HTMLElement | null>(null)
  let buttonRef = $state<HTMLElement | null>(null)
</script>
<div {...__attrs} class={__attrs.class}>
  <input bind:this={inputRef} placeholder="focus me" />
  <button bind:this={buttonRef}>
    Click
  </button>
</div>
"
`;

exports[`full output snapshots > MultiRefs > vue 1`] = `
"<script setup lang="ts">
  import { ref, onMounted } from "vue";
  const inputRef = ref(null)
  const buttonRef = ref(null)
  onMounted(() => { inputRef.value?.focus(); })
</script>
<template>
<div>
  <input placeholder="focus me" ref="inputRef" />
  <button ref="buttonRef">
    Click
  </button>
</div>
</template>
"
`;

exports[`full output snapshots > MultipleComponentsPerFile > angular 1`] = `
"import { Component, signal, computed, effect, Input } from "@angular/core";
@Component({ standalone: true, selector: 'Label', template: \`<span>
{{ text }}
</span>\` })
export class LabelComponent
{
@Input() text!: string
}
"
`;

exports[`full output snapshots > MultipleComponentsPerFile > astro 1`] = `
"---
type Props = { text: string } & Record<string, any>
const props = Astro.props as Props;
const { text, ...__attrs } = props;
---
<span {...__attrs} class={__attrs.class}>
{text}
</span>
"
`;

exports[`full output snapshots > MultipleComponentsPerFile > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const Label = component$((props) =>
{
const { text, ...__attrs } = props
return (
<span {...__attrs} class={props.class}>
  {props.text}
</span>
)
});
"
`;

exports[`full output snapshots > MultipleComponentsPerFile > react 1`] = `
"export function Label(props: { text: string } & React.HTMLAttributes<HTMLElement>)
{
const { text, ...__attrs } = props
return (
<span {...__attrs} className={props.className}>
  {props.text}
</span>
)
}
"
`;

exports[`full output snapshots > MultipleComponentsPerFile > solid 1`] = `
"import { splitProps } from "solid-js";
import type { JSX } from "solid-js";
export default function Label(props: { text: string } & JSX.HTMLAttributes<HTMLElement>)
{
const [, __attrs] = splitProps(props, ["text"])
return (
<span {...__attrs} class={props.class}>
  {props.text}
</span>
)
}
"
`;

exports[`full output snapshots > MultipleComponentsPerFile > svelte 1`] = `
"<script lang="ts">
  interface Props { text: string }
  let { text, ...__attrs }: Props & Record<string, any> = $props()
</script>
<span {...__attrs} class={__attrs.class}>
  {text}
</span>
"
`;

exports[`full output snapshots > MultipleComponentsPerFile > vue 1`] = `
"<script setup lang="ts">
  const props = defineProps<{ text: string }>()
</script>
<template>
<span>
  {{ text }}
</span>
</template>
"
`;

exports[`full output snapshots > PropDefaults > angular 1`] = `
"import { Component, signal, computed, effect, Input } from "@angular/core";
@Component({ standalone: true, selector: 'PropDefaults', template: \`<div [style]="\\\`color: \\\${color}\\\`">
{{ size }}
</div>\` })
export class PropDefaultsComponent
{
@Input() color?
@Input() size!
}
"
`;

exports[`full output snapshots > PropDefaults > astro 1`] = `
"---
type Props = { color?: unknown; size: unknown } & Record<string, any>
const props = Astro.props as Props;
const { color, size, ...__attrs } = props;
---
<div {...__attrs} style={\`color: \${color}\`} class={__attrs.class}>
{size}
</div>
"
`;

exports[`full output snapshots > PropDefaults > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const PropDefaults = component$((props) =>
{
const { color, size, ...__attrs } = props
return (
<div {...__attrs} style={\`color: \${props.color}\`} class={props.class}>
  {props.size}
</div>
)
});
"
`;

exports[`full output snapshots > PropDefaults > react 1`] = `
"export function PropDefaults(props: { color?; size } & React.HTMLAttributes<HTMLElement>)
{
const { color, size, ...__attrs } = props
return (
<div {...__attrs} style={\`color: \${props.color}\`} className={props.className}>
  {props.size}
</div>
)
}
"
`;

exports[`full output snapshots > PropDefaults > solid 1`] = `
"import { splitProps } from "solid-js";
import type { JSX } from "solid-js";
export default function PropDefaults(props: { color?; size } & JSX.HTMLAttributes<HTMLElement>)
{
const [, __attrs] = splitProps(props, ["color", "size"])
return (
<div {...__attrs} style={\`color: \${props.color}\`} class={props.class}>
  {props.size}
</div>
)
}
"
`;

exports[`full output snapshots > PropDefaults > svelte 1`] = `
"<script lang="ts">
  interface Props { color?; size }
  let { color, size, ...__attrs }: Props & Record<string, any> = $props()
</script>
<div {...__attrs} style={\`color: \${color}\`} class={__attrs.class}>
  {size}
</div>
"
`;

exports[`full output snapshots > PropDefaults > vue 1`] = `
"<script setup lang="ts">
  const props = defineProps<{ color?; size }>()
</script>
<template>
<div :style="\`color: \${color}\`">
  {{ size }}
</div>
</template>
"
`;

exports[`full output snapshots > SlotBasic > angular 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'SlotBasic', template: \`<div>
<ng-content />
</div>\` })
export class SlotBasicComponent
{
}
"
`;

exports[`full output snapshots > SlotBasic > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<div {...__attrs} class={__attrs.class}>
<slot />
</div>
"
`;

exports[`full output snapshots > SlotBasic > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const SlotBasic = component$((props) =>
{
const { children, ...__attrs } = props
return (
<div {...__attrs} class={props.class}>
  {props.children}
</div>
)
});
"
`;

exports[`full output snapshots > SlotBasic > react 1`] = `
"export function SlotBasic(props: { children?: React.ReactNode } & React.HTMLAttributes<HTMLElement>)
{
const { children, ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  {props.children}
</div>
)
}
"
`;

exports[`full output snapshots > SlotBasic > solid 1`] = `
"import { splitProps } from "solid-js";
import type { JSX } from "solid-js";
export default function SlotBasic(props: { children?: any } & JSX.HTMLAttributes<HTMLElement>)
{
const [, __attrs] = splitProps(props, ["children"])
return (
<div {...__attrs} class={props.class}>
  {props.children}
</div>
)
}
"
`;

exports[`full output snapshots > SlotBasic > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
</script>
<div {...__attrs} class={__attrs.class}>
  <slot />
</div>
"
`;

exports[`full output snapshots > SlotBasic > vue 1`] = `
"<script setup lang="ts">
</script>
<template>
<div>
  <slot />
</div>
</template>
"
`;

exports[`full output snapshots > SlotInConditional > angular 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'SlotInConditional', template: \`<div>
<ng-content select="[slot=header]" />
@if (expanded()) {
<ng-content />
}
</div>\` })
export class SlotInConditionalComponent
{
expanded = signal(true)
}
"
`;

exports[`full output snapshots > SlotInConditional > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<div {...__attrs} class={__attrs.class}>
<slot name="header" />
{expanded ? (<slot />) : null}
</div>
"
`;

exports[`full output snapshots > SlotInConditional > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const SlotInConditional = component$((props) =>
{
const expanded = useSignal(true)
const { header, children, ...__attrs } = props
return (
<div {...__attrs} class={props.class}>
  {props.header}
  {expanded.value ? (<>{props.children}</>) : null}
</div>
)
});
"
`;

exports[`full output snapshots > SlotInConditional > react 1`] = `
"import { useState } from "react";
export function SlotInConditional(props: { renderHeader?: (...args: any[]) => React.ReactNode; children?: React.ReactNode } & React.HTMLAttributes<HTMLElement>)
{
const [expanded, setExpanded] = useState(true)
const { renderHeader, children, ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  {props.renderHeader?.()}
  {expanded ? props.children : null}
</div>
)
}
"
`;

exports[`full output snapshots > SlotInConditional > solid 1`] = `
"import { createSignal, splitProps, Show } from "solid-js";
import type { JSX } from "solid-js";
export default function SlotInConditional(props: { header?: any; children?: any } & JSX.HTMLAttributes<HTMLElement>)
{
const [expanded, setExpanded] = createSignal(true)
const [, __attrs] = splitProps(props, ["header", "children"])
return (
<div {...__attrs} class={props.class}>
  {props.header}
  <Show when={expanded()}>
    {props.children}
  </Show>
</div>
)
}
"
`;

exports[`full output snapshots > SlotInConditional > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
  let expanded = $state(true)
</script>
<div {...__attrs} class={__attrs.class}>
  <slot name="header" />
  {#if expanded}<slot />
  {/if}
</div>
"
`;

exports[`full output snapshots > SlotInConditional > vue 1`] = `
"<script setup lang="ts">
  import { ref } from "vue";
  const expanded = ref(true)
</script>
<template>
<div>
  <slot name="header" />
  <slot v-if="expanded" />
</div>
</template>
"
`;

exports[`full output snapshots > SlotNamed > angular 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'SlotNamed', template: \`<div>
<header>
<ng-content select="[slot=header]" />
</header>
<main>
<ng-content />
</main>
<footer>
<ng-content select="[slot=footer]" />
</footer>
</div>\` })
export class SlotNamedComponent
{
}
"
`;

exports[`full output snapshots > SlotNamed > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<div {...__attrs} class={__attrs.class}>
<header>
<slot name="header" />
</header>
<main>
<slot />
</main>
<footer>
<slot name="footer" />
</footer>
</div>
"
`;

exports[`full output snapshots > SlotNamed > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const SlotNamed = component$((props) =>
{
const { header, children, footer, ...__attrs } = props
return (
<div {...__attrs} class={props.class}>
  <header>
    {props.header}
  </header>
  <main>
    {props.children}
  </main>
  <footer>
    {props.footer}
  </footer>
</div>
)
});
"
`;

exports[`full output snapshots > SlotNamed > react 1`] = `
"export function SlotNamed(props: { renderHeader?: (...args: any[]) => React.ReactNode; children?: React.ReactNode; renderFooter?: (...args: any[]) => React.ReactNode } & React.HTMLAttributes<HTMLElement>)
{
const { renderHeader, children, renderFooter, ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <header>
    {props.renderHeader?.()}
  </header>
  <main>
    {props.children}
  </main>
  <footer>
    {props.renderFooter?.()}
  </footer>
</div>
)
}
"
`;

exports[`full output snapshots > SlotNamed > solid 1`] = `
"import { splitProps } from "solid-js";
import type { JSX } from "solid-js";
export default function SlotNamed(props: { header?: any; children?: any; footer?: any } & JSX.HTMLAttributes<HTMLElement>)
{
const [, __attrs] = splitProps(props, ["header", "children", "footer"])
return (
<div {...__attrs} class={props.class}>
  <header>
    {props.header}
  </header>
  <main>
    {props.children}
  </main>
  <footer>
    {props.footer}
  </footer>
</div>
)
}
"
`;

exports[`full output snapshots > SlotNamed > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
</script>
<div {...__attrs} class={__attrs.class}>
  <header>
    <slot name="header" />
  </header>
  <main>
    <slot />
  </main>
  <footer>
    <slot name="footer" />
  </footer>
</div>
"
`;

exports[`full output snapshots > SlotNamed > vue 1`] = `
"<script setup lang="ts">
</script>
<template>
<div>
  <header>
    <slot name="header" />
  </header>
  <main>
    <slot />
  </main>
  <footer>
    <slot name="footer" />
  </footer>
</div>
</template>
"
`;

exports[`full output snapshots > SlotScoped > angular 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'SlotScoped', template: \`<ul>
@for (item of items(); track item => item.id) {
<li>
<ng-content select="[slot=item]" />
</li>
}
</ul>\` })
export class SlotScopedComponent
{
items = signal([{ id: 1, label: "One" }, { id: 2, label: "Two" }])
}
"
`;

exports[`full output snapshots > SlotScoped > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<ul {...__attrs} class={__attrs.class}>
{items.map((item, index) => (<li>
<slot name="item" />
</li>))}
</ul>
"
`;

exports[`full output snapshots > SlotScoped > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const SlotScoped = component$((props) =>
{
const items = useSignal([{ id: 1, label: "One" }, { id: 2, label: "Two" }])
const { item, ...__attrs } = props
return (
<ul {...__attrs} class={props.class}>
  {items.value.map((item, index) => (<><li>{props.item?.(item, index) ?? <>{index}:{item.label}</>}</li></>))}
</ul>
)
});
"
`;

exports[`full output snapshots > SlotScoped > react 1`] = `
"import { useState } from "react";
export function SlotScoped(props: { renderItem?: (...args: any[]) => React.ReactNode } & React.HTMLAttributes<HTMLElement>)
{
const [items, setItems] = useState([{ id: 1, label: "One" }, { id: 2, label: "Two" }])
const { renderItem, ...__attrs } = props
return (
<ul {...__attrs} className={props.className}>
  {items.map((item, index) => (<React.Fragment key={item => item.id}><li>{props.renderItem?.(item, index) ?? <>{index}:{item.label}</>}</li></React.Fragment>))}
</ul>
)
}
"
`;

exports[`full output snapshots > SlotScoped > solid 1`] = `
"import { createSignal, splitProps, For } from "solid-js";
import type { JSX } from "solid-js";
export default function SlotScoped(props: { item?: (...args: any[]) => any } & JSX.HTMLAttributes<HTMLElement>)
{
const [items, setItems] = createSignal([{ id: 1, label: "One" }, { id: 2, label: "Two" }])
const [, __attrs] = splitProps(props, ["item"])
return (
<ul {...__attrs} class={props.class}>
  <For each={items()}>
    {(item, index) => <li>{props.item?.(item, index) ?? <>{index}:{item.label}</>}</li>}
  </For>
</ul>
)
}
"
`;

exports[`full output snapshots > SlotScoped > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
  let items = $state([{ id: 1, label: "One" }, { id: 2, label: "Two" }])
</script>
<ul {...__attrs} class={__attrs.class}>
  {#each items as item, index (item.id)}<li>
    <slot name="item" item={item} index={index}>
      {index}:{item.label}
    </slot>
  </li>
  {/each}
</ul>
"
`;

exports[`full output snapshots > SlotScoped > vue 1`] = `
"<script setup lang="ts">
  import { ref } from "vue";
  const items = ref([{ id: 1, label: "One" }, { id: 2, label: "Two" }])
</script>
<template>
<ul>
  <li v-for="(item, index) in items" :key="item.id">
    <slot name="item" :item="item" :index="index">
      <template>
        {{ index }}
        :
        {{ item.label }}
      </template>
    </slot>
  </li>
</ul>
</template>
"
`;

exports[`full output snapshots > SlotScopedSingle > angular 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'SlotScopedSingle', template: \`<div>
<ng-content />
</div>\` })
export class SlotScopedSingleComponent
{
value = signal("hello")
}
"
`;

exports[`full output snapshots > SlotScopedSingle > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<div {...__attrs} class={__attrs.class}>
<slot />
</div>
"
`;

exports[`full output snapshots > SlotScopedSingle > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const SlotScopedSingle = component$((props) =>
{
const value = useSignal("hello")
const { children, ...__attrs } = props
return (
<div {...__attrs} class={props.class}>
  {props.children?.(value.value) ?? <span>{value.value}</span>}
</div>
)
});
"
`;

exports[`full output snapshots > SlotScopedSingle > react 1`] = `
"import { useState } from "react";
export function SlotScopedSingle(props: { renderDefault?: (...args: any[]) => React.ReactNode } & React.HTMLAttributes<HTMLElement>)
{
const [value, setValue] = useState("hello")
const { renderDefault, ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  {props.renderDefault?.(value) ?? <span>{value}</span>}
</div>
)
}
"
`;

exports[`full output snapshots > SlotScopedSingle > solid 1`] = `
"import { createSignal, splitProps } from "solid-js";
import type { JSX } from "solid-js";
export default function SlotScopedSingle(props: { default?: (...args: any[]) => any } & JSX.HTMLAttributes<HTMLElement>)
{
const [value, setValue] = createSignal("hello")
const [, __attrs] = splitProps(props, ["default"])
return (
<div {...__attrs} class={props.class}>
  {props.default?.(value()) ?? <span>{value()}</span>}
</div>
)
}
"
`;

exports[`full output snapshots > SlotScopedSingle > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
  let value = $state("hello")
</script>
<div {...__attrs} class={__attrs.class}>
  <slot prop0={value}>
    <span>
      {value}
    </span>
  </slot>
</div>
"
`;

exports[`full output snapshots > SlotScopedSingle > vue 1`] = `
"<script setup lang="ts">
  import { ref } from "vue";
  const value = ref("hello")
</script>
<template>
<div>
  <slot :prop0="value">
    <span>
      {{ value }}
    </span>
  </slot>
</div>
</template>
"
`;

exports[`full output snapshots > SlotWithDefault > angular 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'SlotWithDefault', template: \`<div>
<main>
<ng-content />
</main>
<footer>
<ng-content select="[slot=actions]" />
</footer>
</div>\` })
export class SlotWithDefaultComponent
{
}
"
`;

exports[`full output snapshots > SlotWithDefault > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<div {...__attrs} class={__attrs.class}>
<main>
<slot />
</main>
<footer>
<slot name="actions" />
</footer>
</div>
"
`;

exports[`full output snapshots > SlotWithDefault > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const SlotWithDefault = component$((props) =>
{
const { children, actions, ...__attrs } = props
return (
<div {...__attrs} class={props.class}>
  <main>
    {props.children ?? <p>Default content</p>}
  </main>
  <footer>
    {props.actions ?? <span>Action area</span>}
  </footer>
</div>
)
});
"
`;

exports[`full output snapshots > SlotWithDefault > react 1`] = `
"export function SlotWithDefault(props: { children?: React.ReactNode; renderActions?: (...args: any[]) => React.ReactNode } & React.HTMLAttributes<HTMLElement>)
{
const { children, renderActions, ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  <main>
    {props.children ?? <p>Default content</p>}
  </main>
  <footer>
    {props.renderActions?.() ?? <span>Action area</span>}
  </footer>
</div>
)
}
"
`;

exports[`full output snapshots > SlotWithDefault > solid 1`] = `
"import { splitProps } from "solid-js";
import type { JSX } from "solid-js";
export default function SlotWithDefault(props: { children?: any; actions?: any } & JSX.HTMLAttributes<HTMLElement>)
{
const [, __attrs] = splitProps(props, ["children", "actions"])
return (
<div {...__attrs} class={props.class}>
  <main>
    {props.children ?? <p>Default content</p>}
  </main>
  <footer>
    {props.actions ?? <span>Action area</span>}
  </footer>
</div>
)
}
"
`;

exports[`full output snapshots > SlotWithDefault > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
</script>
<div {...__attrs} class={__attrs.class}>
  <main>
    <slot>
      <p>
        Default content
      </p>
    </slot>
  </main>
  <footer>
    <slot name="actions">
      <span>
        Action area
      </span>
    </slot>
  </footer>
</div>
"
`;

exports[`full output snapshots > SlotWithDefault > vue 1`] = `
"<script setup lang="ts">
</script>
<template>
<div>
  <main>
    <slot>
      <p>
        Default content
      </p>
    </slot>
  </main>
  <footer>
    <slot name="actions">
      <span>
        Action area
      </span>
    </slot>
  </footer>
</div>
</template>
"
`;

exports[`full output snapshots > SlotWithFallback > angular 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'SlotWithFallback', template: \`<div>
<ng-content select="[slot=header]" />
<ng-content />
</div>\` })
export class SlotWithFallbackComponent
{
}
"
`;

exports[`full output snapshots > SlotWithFallback > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<div {...__attrs} class={__attrs.class}>
<slot name="header" />
<slot />
</div>
"
`;

exports[`full output snapshots > SlotWithFallback > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const SlotWithFallback = component$((props) =>
{
const { header, children, ...__attrs } = props
return (
<div {...__attrs} class={props.class}>
  {props.header ?? <h1>Default Header</h1>}
  {props.children ?? "Default body content"}
</div>
)
});
"
`;

exports[`full output snapshots > SlotWithFallback > react 1`] = `
"export function SlotWithFallback(props: { renderHeader?: (...args: any[]) => React.ReactNode; children?: React.ReactNode } & React.HTMLAttributes<HTMLElement>)
{
const { renderHeader, children, ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  {props.renderHeader?.() ?? <h1>Default Header</h1>}
  {props.children ?? "Default body content"}
</div>
)
}
"
`;

exports[`full output snapshots > SlotWithFallback > solid 1`] = `
"import { splitProps } from "solid-js";
import type { JSX } from "solid-js";
export default function SlotWithFallback(props: { header?: any; children?: any } & JSX.HTMLAttributes<HTMLElement>)
{
const [, __attrs] = splitProps(props, ["header", "children"])
return (
<div {...__attrs} class={props.class}>
  {props.header ?? <h1>Default Header</h1>}
  {props.children ?? "Default body content"}
</div>
)
}
"
`;

exports[`full output snapshots > SlotWithFallback > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
</script>
<div {...__attrs} class={__attrs.class}>
  <slot name="header">
    <h1>
      Default Header
    </h1>
  </slot>
  <slot>
    Default body content
  </slot>
</div>
"
`;

exports[`full output snapshots > SlotWithFallback > vue 1`] = `
"<script setup lang="ts">
</script>
<template>
<div>
  <slot name="header">
    <h1>
      Default Header
    </h1>
  </slot>
  <slot>
    Default body content
  </slot>
</div>
</template>
"
`;

exports[`full output snapshots > SwitchTabs > angular 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'SwitchTabs', template: \`<div>
@switch (true) {
  @case (tab() === "a") {
    <p>
Tab A
</p>
  }
  @case (tab() === "b") {
    <p>
Tab B
</p>
  }
}
<button (click)="() => setTab(tab() === "a" ? "b" : "a")">
Switch
</button>
</div>\` })
export class SwitchTabsComponent
{
tab = signal("a")
}
"
`;

exports[`full output snapshots > SwitchTabs > astro 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<div {...__attrs} class={__attrs.class}>
{tab === "a" ? (<p>
Tab A
</p>) : tab === "b" ? (<p>
Tab B
</p>) : null}
<button onClick={() => setTab(tab === "a" ? "b" : "a")}>
Switch
</button>
</div>
"
`;

exports[`full output snapshots > SwitchTabs > qwik 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const SwitchTabs = component$((props) =>
{
const tab = useSignal("a")
const { ...__attrs } = props
return (
<div {...__attrs} class={props.class}>
  {tab.value === "a" ? (<><p>Tab A</p></>) : tab.value === "b" ? (<><p>Tab B</p></>) : null}
  <button onClick={$(() => () => setTab(tab.value === "a" ? "b" : "a"))}>
    Switch
  </button>
</div>
)
});
"
`;

exports[`full output snapshots > SwitchTabs > react 1`] = `
"import { useState } from "react";
export function SwitchTabs(props: React.HTMLAttributes<HTMLElement>)
{
const [tab, setTab] = useState("a")
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  {tab === "a" ? <p>Tab A</p> : tab === "b" ? <p>Tab B</p> : null}
  <button onClick={() => setTab(tab === "a" ? "b" : "a")}>
    Switch
  </button>
</div>
)
}
"
`;

exports[`full output snapshots > SwitchTabs > solid 1`] = `
"import { createSignal, splitProps, Switch, Match } from "solid-js";
import type { JSX } from "solid-js";
export default function SwitchTabs(props: JSX.HTMLAttributes<HTMLElement>)
{
const [tab, setTab] = createSignal("a")
const [, __attrs] = splitProps(props, [])
return (
<div {...__attrs} class={props.class}>
  <Switch>
    <Match when={tab() === "a"}>
      <p>
        Tab A
      </p>
    </Match>
    <Match when={tab() === "b"}>
      <p>
        Tab B
      </p>
    </Match>
  </Switch>
  <button onclick={() => setTab(tab() === "a" ? "b" : "a")}>
    Switch
  </button>
</div>
)
}
"
`;

exports[`full output snapshots > SwitchTabs > svelte 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
  let tab = $state("a")
</script>
<div {...__attrs} class={__attrs.class}>
  {#if tab === "a"}<p>
    Tab A
  </p>
  {:else if tab === "b"}<p>
    Tab B
  </p>
  {/if}
  <button onclick={() => setTab(tab === "a" ? "b" : "a")}>
    Switch
  </button>
</div>
"
`;

exports[`full output snapshots > SwitchTabs > vue 1`] = `
"<script setup lang="ts">
  import { ref } from "vue";
  const tab = ref("a")
</script>
<template>
<div>
  <p v-if='tab === "a"'>
    Tab A
  </p>
  <p v-else-if='tab === "b"'>
    Tab B
  </p>
  <button @click='() => setTab(tab === "a" ? "b" : "a")'>
    Switch
  </button>
</div>
</template>
"
`;

exports[`multi-component files > ComponentRef → angular (all files) 1`] = `
"import { Component, signal, computed, effect } from "@angular/core";
@Component({ standalone: true, selector: 'Child', template: \`<div>
Child
</div>\` })
export class ChildComponent
{
}

import { Component, signal, computed, effect, viewChild, ElementRef } from "@angular/core";
@Component({ standalone: true, selector: 'ComponentRef', template: \`<unknown />\` })
export class ComponentRefComponent
{
childRef = viewChild<ElementRef>('childRef')
}
"
`;

exports[`multi-component files > ComponentRef → astro (all files) 1`] = `
"---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<div {...__attrs} class={__attrs.class}>
Child
</div>

---
type Props = Record<string, any>
const props = Astro.props as Props;
const { ...__attrs } = props;
---
<Child {...__attrs} class={__attrs.class} />
"
`;

exports[`multi-component files > ComponentRef → qwik (all files) 1`] = `
"import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const Child = component$((props) =>
{
const { ...__attrs } = props
return (
<div {...__attrs} class={props.class}>
  Child
</div>
)
});

import { component$, useSignal, useComputed$, useVisibleTask$, $ } from "@qwik.dev/core";
export const ComponentRef = component$((props) =>
{
const childRef = useSignal(null)
const { ...__attrs } = props
return (
<Child {...__attrs} class={props.class} ref={childRef} />
)
});
"
`;

exports[`multi-component files > ComponentRef → react (all files) 1`] = `
"export function Child(props: React.HTMLAttributes<HTMLElement>)
{
const { ...__attrs } = props
return (
<div {...__attrs} className={props.className}>
  Child
</div>
)
}

import { useRef, useEffect } from "react";
export function ComponentRef(props: React.HTMLAttributes<HTMLElement>)
{
const childRef = useRef(null)
useEffect(() => { console.log(childRef.current); }, [])
const { ...__attrs } = props
return (
<Child {...__attrs} className={props.className} ref={childRef} />
)
}
"
`;

exports[`multi-component files > ComponentRef → solid (all files) 1`] = `
"import { splitProps } from "solid-js";
import type { JSX } from "solid-js";
export default function Child(props: JSX.HTMLAttributes<HTMLElement>)
{
const [, __attrs] = splitProps(props, [])
return (
<div {...__attrs} class={props.class}>
  Child
</div>
)
}

import { onMount, splitProps } from "solid-js";
import type { JSX } from "solid-js";
export default function ComponentRef(props: JSX.HTMLAttributes<HTMLElement>)
{
onMount(() => { console.log(childRef); })
let childRef: HTMLElement | undefined
const [, __attrs] = splitProps(props, [])
return (
<Child {...__attrs} class={props.class} ref={(el) => childRef = el} />
)
}
"
`;

exports[`multi-component files > ComponentRef → svelte (all files) 1`] = `
"<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
</script>
<div {...__attrs} class={__attrs.class}>
  Child
</div>

<script lang="ts">
  let { ...__attrs }: Record<string, any> = $props()
  $effect(() => { console.log(childRef); })
  let childRef = $state<HTMLElement | null>(null)
</script>
<Child bind:this={childRef} {...__attrs} class={__attrs.class} />
"
`;

exports[`multi-component files > ComponentRef → vue (all files) 1`] = `
"<script setup lang="ts">
</script>
<template>
<div>
  Child
</div>
</template>

<script setup lang="ts">
  import { ref, onMounted } from "vue";
  const childRef = ref(null)
  onMounted(() => { console.log(childRef.value); })
</script>
<template>
<Child ref="childRef" />
</template>
"
`;
